# agent-critic

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SPEC.md  docker-compose.yaml  pyproject.toml
config/: config.example.yaml
evaluations/: README.md  rubrics.yaml
evaluations/cases/: coding-correct-add.json  coding-correct-last-element.json  coding-offbyone-last-element.json  coding-wrong-operation-add.json  general-capital-correct.json  general-capital-wrong.json  general-math-correct.json  general-math-wrong.json  general-sky-correct.json  general-sky-wrong.json
prompts/: critic_system.txt
src/agent_critic/: __init__.py  cli.py  config.py  critic.py  evaluate.py  models.py  prompts.py  selection.py  server.py
tests/: conftest.py  test_config.py  test_critic.py  test_envelope.py  test_evaluations.py  test_prompt.py  test_request.py  test_selection.py
